static/src/stylesheets/module/facia/_pagination.scss
/*doc
---
title: Pagination
name: pagination
category: Facia
---
The user needs to view a subset of sorted data that is not easily displayed on one page.

```html_example
<div class="pagination u-cf">
    <span class="pagination__legend hide-on-mobile-inline">
        About 12,345 results for Tag Name
    </span>
    <ol class="pagination__list u-unstyled">
        <li class="pagination__item">
            <a class="pagination__item-inner pagination__action" rel="next" href="#"><span class="u-h">N</span></a>
        </li>
        <li class="pagination__item">
            <a class="pagination__action" href="#">3</a>
        </li>
        <li class="pagination__item">
            <a class="pagination__action" href="#">4</a>
        </li>
        <li class="pagination__item">
            <span class="pagination__action is-active">5</span>
        </li>
        <li class="pagination__item">
            <span class="pagination__text">...</span>
        </li>
        <li class="pagination__item">
            <a class="pagination__action" href="#">6</a>
        </li>
        <li class="pagination__item">
            <a class="pagination__action" href="#">7</a>
        </li>
        <li class="pagination__item">
            <a class="pagination__item-inner pagination__action" rel="prev" href="#"><span class="u-h">P</span></a>
        </li>
    </ol>
</div>
```
*/

$pagination-item-size: 24px;
$pagination-height: 48px;
$pagination-gutter: ($pagination-height - $pagination-item-size) / 2;

.pagination {
    text-align: right;
    @include f-textSans;
    @include font-size(14px, 48px);
    border-top: 1px solid $c-neutral5;

    @include mq(leftCol) {
        float: right;
        width: gs-span(12);
    }

    @include mq(wide) {
        width: gs-span(13);

        .has-page-skin & {
            width: 100%;
        }
    }
}

.pagination__list {
    width: 100%;
    margin: $pagination-gutter 0;
    line-height: $pagination-item-size;

    @include mq(tablet) {
        float: right;
        width: gs-span(4);
    }
}

.pagination__legend {
    float: left;
}

%pagination-link {
    @extend %icon-holder-circle;
    @include box-sizing(border-box);
    width: $pagination-item-size;
    height: $pagination-item-size;
    display: inline-block;
    color: $c-neutral2;
}

.pagination__item {
    display: inline-block;
    text-align: center;
}

/**
 *  1. to align font to the middle. Some numbers are in the middle by default (1, 4)
 *     but most of them need one 1px indent so it looks nicer.
 */
.pagination__action {
    @extend %pagination-link;
    font-weight: bold;
    text-indent: 1px; /* [1] */
    border-color: transparent;

    &:hover {
        border-color: $c-neutral2;
        color: $c-neutral2;
    }

    &.is-active {
        color: #ffffff;
        background-color: $c-neutral2;
    }
}

.pagination__action--static {
    @extend %pagination-link;
    border-color: $c-neutral2;
    text-align: center;

    i {
        vertical-align: text-top;
    }

    @include mq(desktop) {
        opacity: .6;

        &:hover,
        &:focus {
            opacity: 1;
        }
    }
}
.pagination__text {
    color: $c-neutral2;
}

